--- a/PIR2Motion/appsettings.Development.json
+++ b/PIR2Motion/appsettings.Development.json
@@ -1,7 +1,5 @@
 ﻿{
   "MotionDetection": {
-    "SaveFolder": ".",
-    "CaptureExecutable": "curl",
-    "FmtCaptureExecutableArgs": "index.hu -o {0} | echo {1}"
+    "SaveFolder": "."
   }
 }
