--- a/PIR2Motion/appsettings.json
+++ b/PIR2Motion/appsettings.json
@@ -5,8 +5,6 @@
     }
   },
   "MotionDetection": {
-    "SaveFolder": "/cam",
-    "CaptureExecutable": "/bin/sh",
-    "FmtCaptureExecutableArgs": "-c 'raspivid -o -| tee {0} | rclone --config /etc/rclone/rclone.conf rcat OneDrive:Cam1/{1}'"
+    "SaveFolder": "/cam"
   }
 }
